<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoSchedule</string>
    <string name="hello_world">Hello world!</string>

    <string name="signout">Sign Out</string>
    <string name="weekview">Week View</string>
    <string name="leaves">Filed Leaves</string>
    <string name="search">Search</string>
    <string name="resources">Resources</string>
    <string name="reset">Reset Password</string>
    <string name="title_activity_leave">GoSchedule</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="searchbutton">Search by EID</string>
    <string name="leavebutton">File Leave</string>
    <string name="logstring">Log Leave</string>
    <string name="leave_prompt">Choose a Leave Type</string>
    <string name="left">◄</string>
    <string name="right">►</string>
    <string name="lbl_forgot_password">Reset password?</string>
    <string name="myleaves">My Leaves</string>

    <string-array name="leave_arrays">
        <item>Elective Holiday</item>
        <item>Emergency Leave</item>
        <item>Holiday</item>
        <item>Maternity Leave</item>
        <item>Offset</item>
        <item>Sick Leave</item>
        <item>Training</item>
        <item>Vacation Leave</item>
    </string-array>

    <string-array name="tower_arrays">
        <item>Special Initiatives</item>
        <item>Training</item>
        <item>Opportunities and Solutioning</item>
        <item>PMO / BP2B</item>
        <item>Creative and Marketing</item>

    </string-array>


    <string name="title_activity_view_leave">GoSchedule</string>

    <item name="signout" type="id" />
    <item name="weekview" type="id" />
    <item name="leaves" type="id" />
    <item name="resources" type="id" />
    <item name="reset" type="id" />


    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


</resources>
