<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/weekview"
        android:orderInCategory="100"
        android:title="@string/weekview"
        android:icon="@drawable/ic_weekview"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>



    <item
        android:id="@+id/myleaves"
        android:orderInCategory="100"
        android:title="@string/myleaves"
        app:showAsAction="never"/>



    <item
        android:id="@+id/reset"
        android:orderInCategory="100"
        android:title="@string/reset"
        app:showAsAction="never"/>

    <item
        android:id="@+id/signout"
        android:orderInCategory="100"
        android:title="@string/signout"
        app:showAsAction="never"/>



</menu>